Git repository link added

--- a/_posts/2015-06-01-project3.md
+++ b/_posts/2015-06-01-project3.md
@@ -2,7 +2,7 @@
 title: "Indoor Navigation System"
 repository:
   name: "github.com"
-  url: "/projects"
+  url: "/anishalunawat/IndoorNavigation"
 libraries:
   - name: "Android Framework"
     url: "https://developer.android.com"
