Git repository link added

--- a/_posts/2015-06-01-project2.md
+++ b/_posts/2015-06-01-project2.md
@@ -2,7 +2,7 @@
 title: "Recharge Plan Recommender"
 repository:
   name: "github.com"
-  url: "/projects"
+  url: "https://github.com/anishalunawat/Recharge-Plan-Recommender"
 libraries:
   - name: "Android Framework"
     url: "https://developer.android.com"
