Git repository link added

--- a/_posts/2015-06-01-project4.md
+++ b/_posts/2015-06-01-project4.md
@@ -2,7 +2,7 @@
 title: "Friends Family Genealogy"
 repository:
   name: "github.com"
-  url: "/projects"
+  url: "https://github.com/anishalunawat/FriendlyGenealogy"
 libraries:
   - name: "db4o"
     url: "http://www.db4o.com"
